# scLens

./: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: release.yml
apps/backend/: .env.example  package.json  tsconfig.json
apps/desktop/: index.html  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  pairing.rs  proc.rs  python_probe.rs  store.rs  system_probe.rs
apps/desktop/src-tauri/src/commands/: mod.rs  pairing.rs  pipeline.rs  runner.rs  system.rs
docs/: 01_REQUIREMENTS.md  02_DEVELOPMENT_GUIDE.md  03_TEST_PLAN.md  04_AI_GUIDE.md  05_API_SCHEMA.md  README.md
infra/: docker-compose.yml  nginx.conf
python/analysis-core/: README.md  pyproject.toml
python/analysis-core/sclens_core/: cli.py  progress.py  provenance.py
python/analysis-core/sclens_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/analysis-core/sclens_core/io/: loader.py
python/analysis-core/sclens_core/pipelines/: inspect.py  standard.py
python/analysis-core/sclens_core/plotting/: figures.py
python/analysis-core/sclens_core/qc/: metrics.py
python/analysis-core/sclens_core/report/: render.py
python/analysis-core/sclens_core/schemas/: params.py
python/analysis-core/sclens_core/templates/: inspect_report.html.j2  standard_report.html.j2
python/analysis-core/sclens_core/utils/: checksum.py
python/analysis-core/tests/: test_cli.py
(+61 files in other folders)
