[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sclens-core"
version = "0.1.0"
description = "Python analysis core for scLens"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9",
  "scanpy>=1.9",
  "anndata>=0.9",
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
  "scikit-learn>=1.1",
  "matplotlib>=3.6",
  "h5py>=3.7",
  "python-igraph>=0.10",
  "leidenalg>=0.10",
  "umap-learn>=0.5",
  "pyarrow>=10",
  "jinja2>=3.1",
]

[project.scripts]
sclens = "sclens_core.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["sclens_core*"]

[tool.setuptools.package-data]
"sclens_core" = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
