[package]
name = "sclens-runner"
version = "0.1.2"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
sysinfo = "0.32"
uuid = { version = "1", features = ["v4"] }
rfd = "0.14"

[build-dependencies]
tauri-build = { version = "2", features = [] }
